--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
-		"test": "vitest"
+		"test": "vitest",
+		"lint": "eslint .",
+		"lint:format": "eslint --fix ."
 	},
 	"dependencies": {
 		"@emotion/react": "^11.10.5",
@@ -26,9 +28,12 @@
 	"devDependencies": {
 		"@types/react": "^18.0.24",
 		"@types/react-dom": "^18.0.8",
+		"@typescript-eslint/eslint-plugin": "^5.45.1",
+		"@typescript-eslint/parser": "^5.45.1",
 		"@vitejs/plugin-react": "^2.2.0",
 		"autoprefixer": "^10.4.13",
 		"eslint": "^8.29.0",
+		"eslint-plugin-react": "^7.31.11",
 		"postcss": "^8.4.18",
 		"tailwindcss": "^3.2.3",
 		"typescript": "^4.6.4",
